--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
     <main>
 
         <section>
-                <img class="logo" src="./img/logo.png" alt="IMAGEM LOGO">
+               <!--
+                   <img class="logo" src="./img/logo.png" alt="IMAGEM LOGO">
+                -->
+                   
+                   
+                <div class="img"></div>
+
                 <div class="txt">
                     <h2>
                         Solicitação
